fix : final commit

--- a/library.Application/appsettings.Development.json
+++ b/library.Application/appsettings.Development.json
@@ -11,6 +11,7 @@
     "Audience": "library-client"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=librarydb;Username=postgres;Password=macae123"
+    "DefaultConnection" : "Host=dpg-d4ek2h2li9vc73audpb0-a;Port=5432;Database=postgresql_yv1j;Username=postgresql_yv1j_user;Password=wkurp8TzCUSjcFwyvlxtP9a56i9A34OA",
+    "_Comment_DefaultConnection": "Host=localhost;Port=5432;Database=librarydb;Username=postgres;Password=macae123"
   }
 }
