--- a/library.Application/Dockerfile
+++ b/library.Application/Dockerfile
@@ -8,7 +8,7 @@ ENV PATH="$PATH:/root/.dotnet/tools"
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
+WORKDIR /src2
 RUN echo ${PWD} && ls -lR
 COPY ["library.Application/library.Application.csproj", "library.Application/"]
 COPY ["library.API/library.API.csproj", "library.API/"]
