--- a/library.Application/Dockerfile
+++ b/library.Application/Dockerfile
@@ -10,9 +10,9 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-COPY "library.Application/library.Application.csproj" "library.Application/"
-COPY "library.API/library.API.csproj" "library.API/"
-COPY "library.Domain/library.Domain.csproj" "library.Domain/"
+COPY ["src/library.Application/library.Application.csproj", "library.Application/"]
+COPY ["src/library.API/library.API.csproj", "library.API/"]
+COPY ["src/library.Domain/library.Domain.csproj", "library.Domain/"]
 
 RUN dotnet restore "library.Application/library.Application.csproj"
 COPY . .
