fix: removing wrong paths

--- a/library.Application/Dockerfile
+++ b/library.Application/Dockerfile
@@ -9,11 +9,9 @@ ENV PATH="$PATH:/root/.dotnet/tools"
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-
-COPY ["C:\Users\jvito\Development\jose\Projects\library_CQRS\library.Application\library.Application.csproj", "src/library.Application/"]
-COPY ["C:\Users\jvito\Development\jose\Projects\library_CQRS\library.API\library.API.csproj", "src/library.API/"]
-COPY ["C:\Users\jvito\Development\jose\Projects\library_CQRS\library.Domain\library.Domain.csproj", "src/library.Domain/"]
-
+COPY ["library.Application/library.Application.csproj", "library.Application/"]
+COPY ["library.API/library.API.csproj", "library.API/"]
+COPY ["library.Domain/library.Domain.csproj", "library.Domain/"]
 RUN dotnet restore "library.Application/library.Application.csproj"
 COPY . .
 WORKDIR "/src/library.Application"
